fix: dark mode settings, and pathfinder theme cleanup

--- a/assets/js/hooks/Mapper/components/map/Map.module.scss
+++ b/assets/js/hooks/Mapper/components/map/Map.module.scss
@@ -1,8 +1,11 @@
 .MapRoot {
   width: 100%;
   height: 100%;
-}
 
-.BackgroundAlternateColor {
-  background-color: var(--rf-soft-bg-color, #2f2f2f);
+  background-color: var(--rf-bg-color);
+
+  &.BackgroundAlternateColor {
+    background-color: var(--rf-soft-bg-color, #353535);
+    --rf-node-bg-color: var(--rf-node-soft-bg-color, #2a2a2a);
+  }
 }
