--- a/assets/js/hooks/Mapper/components/map/styles/neon-theme.scss
+++ b/assets/js/hooks/Mapper/components/map/styles/neon-theme.scss
@@ -2,6 +2,17 @@
 @import './eve-common';
 
 .neon-theme {
+  --rf-bg-color:#000000;
+  --rf-soft-bg-color: #171717;
+
+  --rf-node-bg-color: #202020;
+  --rf-node-soft-bg-color: #2b2b2b;
+
+  --rf-bg-variant: "dots";
+  --rf-bg-gap: 16;
+  --rf-bg-size: 1;
+  --rf-bg-pattern-color: #81818a;
+
   --pastel-blue: #5a7d9a;
   --pastel-pink: #d291bc;
   --pastel-green: #88b04b;
@@ -9,9 +20,6 @@
   --dark-bg: #2d2d2d;
   --text-color: #ffffff;
   --tooltip-bg: #202020;
-
-  --rf-bg-variant: "dots";
-  --rf-bg-gap: 16;
 
   .react-flow {
     color: var(--text-color);
