--- a/assets/js/hooks/Mapper/components/map/styles/pathfinder-theme.scss
+++ b/assets/js/hooks/Mapper/components/map/styles/pathfinder-theme.scss
@@ -4,19 +4,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
 .pathfinder-theme {
+  --rf-bg-color: #000000;
+  --rf-soft-bg-color: #282828;
 
-  --rf-bg-variant: "lines";
-  --rf-bg-gap: 32;
-  --rf-bg-color: #353535;
-  --rf-soft-bg-color: #282829;
+  --rf-node-bg-color: #202020;
+  --rf-node-soft-bg-color: #313335;
 
   --pf-text-color: #adadad;
-  --pf-dark-bg: #2d2d2d;
   --pf-tooltip-bg: #202020;
+
   --rf-bg-variant: "lines";
   --rf-bg-gap: 32;
   --rf-bg-size: 1;
-  --rf-bg-color: #313131;
+  --rf-bg-pattern-color: #313131;
+
   --eve-effect-pulsar: #428bca;
   --eve-effect-magnetar: #e06fdf;
   --eve-effect-wolfRayet: #e28a0d;
@@ -36,24 +37,11 @@
   --eve-wh-type-color-c13: #7986cb;
   --eve-wh-type-color-drifter: #44aa82;
 
-  .MapRoot {
-    background-color: var(--rf-bg-color);
-
-    &.isSoftBackground {
-      background-color: var(--rf-soft-bg-color);
-    }
-    &.soft-bg {
-      --rf-bg-color: var(--rf-soft-bg-color);
-    }
-  }
-
   .RootCustomNode {
-    background-color: #313335 !important;
     font-weight: bold;
     line-height: normal;
     color: var(--pf-text-color);
     font-family: 'Oxygen', sans-serif !important;
-    background-color: #313335;
   }
 
   .tagTitle {
@@ -101,6 +89,7 @@
   }
 
   .BottomRow {
+    font-weight: bold;
     .localCounter {
       display: flex;
 
@@ -111,7 +100,7 @@
       & > span {
         font-size: 9px;
         line-height: 9px;
-        font-weight: 700;
+        font-weight: bold;
         mix-blend-mode: screen;
         color: #5cb85c;
       }
